vlib/v/checker/tests/for_in_index_type.vv
fn main() {
	for a in 52 {
		println(a)
	}
}
